--- a/style.css
+++ b/style.css
@@ -96,3 +96,9 @@ h2,h3{
 #body > button > div > p{
     font-size: 1.2em;
 }
+#about{
+    width: 80%;
+    height: 50%;  
+    font-size: 2em; 
+    font-family: monospace;
+}
